git push -u origin mainFeatures Fixed

--- a/author.yaml
+++ b/author.yaml
@@ -1,4 +1,4 @@
 author:
-  firstname: "YOUR"
-  lastname: "NAME"
-  email: "YOURNAME@example.com"
+  firstname: "Premchand"
+  lastname: "Jalla"
+  email: "pjalla@mail.yu.edu"
